@@ -6,6 +6,12 @@ Please add newer entries at the top, list the date and your name with
 email address.
 
 
+2008-May-1 UPDATE Dick Hollenbeck <dick@softplc.com>
+================================================================================
++pcbnew
+  * Fixed bugs in layer name handling within the BOARD
+
+
 2008-Apr-30 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +eeschema:
